{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 33,
  "lineage": "96f63907-0850-fa04-bb2a-2bf3cb5a1a72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fae20f47026a821a",
            "arn": "arn:aws:ec2:eu-central-1:252266302339:elastic-ip/eipalloc-0fae20f47026a821a",
            "association_id": "eipassoc-0962e89fe7093af9b",
            "domain": "vpc",
            "id": "eipalloc-0fae20f47026a821a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-040f63a863544fd02",
            "private_dns": "ip-10-0-1-127.eu-central-1.compute.internal",
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-52-59-5-186.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.5.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "devops-cluster-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:internet-gateway/igw-03d24f8af1bbaadaa",
            "id": "igw-03d24f8af1bbaadaa",
            "owner_id": "252266302339",
            "tags": {
              "Name": "devops-cluster-igw"
            },
            "tags_all": {
              "Name": "devops-cluster-igw"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fae20f47026a821a",
            "association_id": "eipassoc-0962e89fe7093af9b",
            "connectivity_type": "public",
            "id": "nat-052a91a572c4986f2",
            "network_interface_id": "eni-040f63a863544fd02",
            "private_ip": "10.0.1.127",
            "public_ip": "52.59.5.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d653e5ade17ea25",
            "tags": {
              "Name": "devops-cluster-nat"
            },
            "tags_all": {
              "Name": "devops-cluster-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:route-table/rtb-0a765105549eb6673",
            "id": "rtb-0a765105549eb6673",
            "owner_id": "252266302339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052a91a572c4986f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-private-rt"
            },
            "tags_all": {
              "Name": "devops-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:route-table/rtb-097a3182b02f24478",
            "id": "rtb-097a3182b02f24478",
            "owner_id": "252266302339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d24f8af1bbaadaa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-public-rt"
            },
            "tags_all": {
              "Name": "devops-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf9b8d97e9244717",
            "route_table_id": "rtb-0a765105549eb6673",
            "subnet_id": "subnet-0f558eeb053dd25b3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b863e1246e425dd",
            "route_table_id": "rtb-0a765105549eb6673",
            "subnet_id": "subnet-05ed4f0d5b9318aa0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009b45383ca8b5c74",
            "route_table_id": "rtb-0a765105549eb6673",
            "subnet_id": "subnet-0139a143aa0432940"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0b1014fb2564e94",
            "route_table_id": "rtb-097a3182b02f24478",
            "subnet_id": "subnet-00d653e5ade17ea25"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00938e26311e0f3ea",
            "route_table_id": "rtb-097a3182b02f24478",
            "subnet_id": "subnet-0caf7c7ced19b42ab"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ce85eb35a913e8a",
            "route_table_id": "rtb-097a3182b02f24478",
            "subnet_id": "subnet-053eb8de9016360e6"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-0f558eeb053dd25b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f558eeb053dd25b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-05ed4f0d5b9318aa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ed4f0d5b9318aa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-0139a143aa0432940",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0139a143aa0432940",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-3",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-private-3",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-00d653e5ade17ea25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d653e5ade17ea25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-public-1",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-0caf7c7ced19b42ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf7c7ced19b42ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-public-2",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:subnet/subnet-053eb8de9016360e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053eb8de9016360e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252266302339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-3",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-public-3",
              "kubernetes.io/cluster/devops-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d67333133e4548e8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:252266302339:vpc/vpc-0d67333133e4548e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07966092c929c11eb",
            "default_route_table_id": "rtb-0210399d53bb68b1e",
            "default_security_group_id": "sg-0716e05728c6c01a5",
            "dhcp_options_id": "dopt-0345687ff6e901258",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d67333133e4548e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0210399d53bb68b1e",
            "owner_id": "252266302339",
            "tags": {
              "Name": "devops-cluster-vpc",
              "kubernetes.io/cluster/devops-cluster": "shared"
            },
            "tags_all": {
              "Name": "devops-cluster-vpc",
              "kubernetes.io/cluster/devops-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}